--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Blog
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:LgEi2qBPoBdGre3N1i/cXtlaBB4AzRHRWxdvU8KxI9w=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=blog
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -36,7 +36,6 @@ MAIL_PASSWORD=yfejevdoecgrgfff
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=mrtinm00@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
-
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
